--- a/lapse/index.html
+++ b/lapse/index.html
@@ -48,6 +48,55 @@
 
 <br>
 
+<!-- Section --> 
+      <!--image-->
+      <div style=" margin-left:40px;">
+        <div class="imagetime" >
+        <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/lapse/glyphgan/0.png">   
+        </div>
+      </div>
+  <div style="text-align:left;">
+    <button class="l-button w3-margin-bottom" onclick="document.getElementById('e').style.display='block'">
+      <b style="font-size: 1.1em;">GlyphGAN</b> - Style-Consistent Font Generation Based on Generative Adversarial Networks
+      <span class="quotey" style="font-size: .8em;"><br>    - 14 JUL 2021 </span></button>
+  </div>
+  <br>
+  
+<div id="e" class="w3-modal">
+  <div class="w3-modal-content w3-animate-top w3-card-4">
+    <header class="w3-container w3-teal w3-center w3-padding-32"> 
+      <button class="w3-button w3-red w3-section w3-display-topright" onclick="document.getElementById('e').style.display='none'">X<i class="fa fa-remove"></i></button>
+    
+      <h3 style="text-align: center;" class="w3-wide"><i class="fa fa-suitcase w3-margin-right"></i>GlyphGAN</h3>
+    </header>
+    <div class="w3-container">
+  <p><i></i> <span class="quotey" style="font-size: .95em;">- Hideaki Hayashia,∗, Kohtaro Abea, Seiichi Uchidaa
+    / Department of Advanced Information Technology, Kyushu University, Fukuoka, Japan</span>
+    </p>
+
+    <p>While looking into methods of developing consistent typefaces, i found an interesting experiment into 
+      artifical intelligence assisted font face generation. <a target="_blank" href="https://arxiv.org/pdf/1905.12502.pdf">The paper</a> 
+    explores and succeeds in methods of creating legible fonts through ai, with a consistent style throughout the entire alphabet and significant
+    differences from the training images. The paper is a fascinating read, and goes into great (actually understandable) detail about how everything works, but sadly it isn't copy paste code, 
+    so nothing practical learned here for me.
+   </p>
+    <div style="text-align: center;">
+      <img style="width:500px;" class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/lapse/glyphgan/1.png">
+      <span class="quotey" style="font-size: .95em;"><br>Examples of training patterns used in the experiment</span>
+    </div>
+    
+
+    <p>- ren ​♡</p>
+    <br><br><br><br>
+      </div>
+  </div>
+</div>
+<!--Section End-->
+
+
+
+
+
   <!-- Section --> 
       <!--image-->
       <div style=" margin-left:110px;">
