--- a/lapse/index.html
+++ b/lapse/index.html
@@ -222,7 +222,7 @@
     <a target="_blank" href="https://open.spotify.com/artist/6nqR1MdjPNXu5KSdeqJBI1?si=3DWGHj6AROqC2iQpNPHlFg">sasakure.UK</a>
     music, and wanted to hear more of the vocals that made one of my favorite songs of theirs (Mayday, Maybe navy).
     As sorako did not have any exclusive music, that led me to
-    listening to aetern's newest albulm,
+    listening to aeterne's newest albulm,
     <a target="_blank" href="https://open.spotify.com/album/4jQqtkLPuSzMw4PSmXHqk9?si=W2RdllEDS-eMMBT72y4vuQ">florere</a>,
     which is very well-produced and contains a massive banger (Melody of the sunny spot), yet every song has less than 1000 plays.
     This surprised me quite a bit, considering an amateur artist like my own brother has more followers, monthly listeners, and plays on Spotify.
