--- a/annex/mobile/index.html
+++ b/annex/mobile/index.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="ren, relive, relivesight, omnisai, omnisairen">
     <meta name="author" content="omnisairen">
-    <link rel="icon" type="image/png" href="../images/home/pupilpng.png" sizes="1000x1000" />
+    <link rel="icon" type="image/png" href="../../images/home/pupilpng.png" sizes="1000x1000" />
     <link rel="stylesheet" media="screen"/>
   </head>
 
@@ -221,7 +221,8 @@
                                 class="img-responsive"
                                 src=""></img><figcaption>  </figcaption></td>
                       </table>
-
+                      <p class="text-center"><a href="https://www.relivesight.com">┈ return home ┈</a></p>            
+    
           </div>
    
 
