--- a/lists/anime/index.html
+++ b/lists/anime/index.html
@@ -124,7 +124,7 @@
         <p>Shows:</p>
         <table class="tableizer-table">
           <thead><tr><td>Name</td><td>Progress</td><td>Type</td><td>Score</td><td>Notes</td></tr></thead><tbody>
-            <tr><td class="wat">FLCL </td><td>6</td><td>Ova</td><td class="a0">~</td><td></td></tr>
+            <tr><td class="wat">Alien 9</td><td>1</td><td>Ova</td><td class="a0">~</td><td></td></tr>
             
 
             <tr><td class="fav">Shin Seiki Evangelion </td><td>26</td><td>Tv</td><td class="a9">9.6</td><td>a true classic</td></tr>
@@ -150,10 +150,11 @@
             <tr><td class="fav">Mahou Shoujo Madoka☆Magica </td><td>12</td><td>Tv</td><td class="a8">8.6</td><td>just a cute magical girl show ☆</td></tr>
             <tr><td class="fav">Nichijou </td><td>26</td><td>Tv</td><td class="a8">8.6</td><td>top tier slice of life comedy</td></tr>
             <tr><td class="cmp">Paprika</td><td>1</td><td>Film</td><td class="a8">8.5</td><td></td></tr>
-            <tr><td class="fav">No Game No Life </td><td>12</td><td>Tv</td><td class="a8">8.5</td><td>if i actually remembered that there is ecchi this would have a much lower rating</td></tr>
-            <tr><td class="fav">Boku no Hero Academia 2 </td><td>25</td><td>Tv</td><td class="a8">8.2</td><td>best season imo</td></tr>
-             <tr><td class="fav">Fullmetal Alchemist</td><td>51</td><td>Tv</td><td class="a8">8.2</td><td></td></tr>
-            <tr><td class="cmp">Perfect Blue</td><td>1</td><td>Film</td><td class="a8">8.1</td><td></td></tr>
+            <tr><td class="cmp">FLCL </td><td>6</td><td>Ova</td><td class="a8">8.5</td><td>the best at themes before plot</td></tr>
+            <tr><td class="cmp">Perfect Blue</td><td>1</td><td>Film</td><td class="a8">8.3</td><td></td></tr>
+            <tr><td class="fav">Fullmetal Alchemist</td><td>51</td><td>Tv</td><td class="a8">8.2</td><td></td></tr>
+            <tr><td class="fav">Boku no Hero Academia 2 </td><td>25</td><td>Tv</td><td class="a8">8.2</td><td>why is this so high? who knows</td></tr>
+            <tr><td class="fav">No Game No Life </td><td>12</td><td>Tv</td><td class="a8">8.1</td><td>if i actually remembered that there is ecchi this would have a much lower rating</td></tr>
             <tr><td class="fav">Tokyo Ghoul </td><td>12</td><td>Tv</td><td class="a8">8.1</td><td>no where near the manga but sure</td></tr>
             <tr><td class="cmp">Byousoku 5 Centimeter </td><td>3</td><td>Film</td><td class="a8">8.0</td><td>makoto shinkai good v2</td></tr>
             <tr><td class="cmp">Steins;Gate: Fuka Ryouiki no Déjà vu </td><td>1</td><td>Film</td><td class="a8">8.0</td><td>deja vu</td></tr>
