--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <a href="/highlights" class="navi"><img src="images/nav/flow1.png">highlights</a>
         <a href="/reference" class="navi"><img src="images/nav/flow1.png">reference</a>
         <a href="/lists" class="navi"><img src="images/nav/flow1.png">lists</a>
-              
+        <a href="/habitue" class="navi"><img src="images/nav/flow1.png">habitue</a>    
         <img src="images/nav/navi-rite1.png" class="naviBanners" style="margin-top:20px;">
         <a href="/ongoing" class="navi"><img src="images/nav/flow1.png">ongoing</a>
         <a href="/projects" class="navi"><img src="images/nav/flow1.png">projects</a>
@@ -102,7 +102,7 @@
             <img class="logo" style="width:500px;" src="images/home/tumble.png" />
             
             <!-- look below dummy -->
-            <p>┈ 66,514 page views ​♡ {updates daily} ​┈</p>
+            <p>┈ 66,523 page views ​♡ {updates daily} ​┈</p>
             <!-- for those of you checking the code to see how i did the page view counter 
             i have a script that accesses my local hosted server for the current view count
             and edits this html code accordingly, then its up to me to push the update.
