--- a/highlights/index.html
+++ b/highlights/index.html
@@ -93,7 +93,8 @@
      some of these will be linked to elsewhere, but here is a little hub of some of my silly 'achievements/feats'. it could also be that i made this section with the hope it encourages me to
      increase the amount of things here, best of luck to (future) present me then! (sr) = speedrun, all runs reflect their place at the time, places may have changed.
      </p>
-     <ul>
+     <ul> 
+       <li>my art featured at the <a href="https://artbyform.com/" target="_blank">2021 form fair</a> online art gallery </li>
          <li><a href="https://www.speedrun.com/cuphead/run/ylken7rz" target="_blank">(sr) cuphead - all bosses - regular, legacy - 30:28</a> - 85th place</li>
          <li><a href="https://www.speedrun.com/sally_face/run/mk379o5z" target="_blank">(sr) sally face - any% - 2:16:23</a> - 2nd place </li>
          <li><a href="https://www.video-games-records.com/wii-party-mini-games-with-record-rope-sling-record-r156067.html" target="_blank">wii party - rope swing - 181yd/181m </a> - 1st place</li>
