--- a/cherry/contact/index.html
+++ b/cherry/contact/index.html
@@ -38,7 +38,7 @@
 
     <h2>[Contact]</h2>
     <p class="page-description text-center">
-   / contact me / <a href="https://relivesight.com/">relivesight.com</a> / cherry / 
+   / contact me / <a href="https://relivesight.com/">relivesight.com</a> / cherry / <a href="https://relivesight.com/">return home</a> /
    <br><br>
    [discord]: 𝖆𝖑𝖊𝖙𝖎𝖚𝖓𝖊#3865
    <br>
