--- a/cherry/shop/index.html
+++ b/cherry/shop/index.html
@@ -38,7 +38,7 @@
 
     <h2>[Shop]</h2>
     <p class="page-description text-center">
-   / learn to live / <a href="https://relivesight.com/">relivesight.com</a> / 
+   / learn to live / <a href="https://relivesight.com/">relivesight.com</a> / <a href="https://relivesight.com/">return home</a> /
    <h1>coming soon . . .</h1>
 </p><br>
   
