--- a/cherry/daily/index.html
+++ b/cherry/daily/index.html
@@ -39,7 +39,8 @@
 
     <h2>[Daily Art]</h2>
     <p class="page-description text-center">
-   [official start date]: {jun 15 2021} [current day]: {no.42} 
+        / learn to live / <a href="https://relivesight.com/">relivesight.com</a> / <a href="https://relivesight.com/">return home</a> /<br>
+   [official start date]: {jun 15 2021} [current day]: {no.43} 
    
    <br><br>
    [tools utilized]: after effects / element 3d / photoshop / blender /
@@ -565,7 +566,7 @@
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/42.png" >
                         </a>
                     </div>
-                </div><!--
+                </div>
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/43.png" 
@@ -573,7 +574,7 @@
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/43.png" >
                         </a>
                     </div>
-                </div>
+                </div><!--
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/44.png" 
