--- a/writing/index.html
+++ b/writing/index.html
@@ -13,11 +13,11 @@
     <link rel="stylesheet" media="screen"/>
   </head>
 
-  <!-- make it redirect to a mobile version-->
+  <!-- make it redirect to a mobile version
   <script language="javascript">
     if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
       location.href = '/writing/mobile';}
-  </script>
+  </script>-->
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123647555-2"></script>
   <script>
