--- a/writing/paprika/index.html
+++ b/writing/paprika/index.html
@@ -94,8 +94,12 @@
               <p> </p><br><p> </p><br><p> </p><br> 
             </div>
            <h1 class="text-center">OVERVIEW</h2>
-            <p class="text-center">¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯</p>
-          <div class="bodystuff">
+            <div class="harry">
+              <p class="text-center">¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯</p>
+            </div><div class="larry">
+              <p class="text-center">¯¯¯¯¯¯¯¯¯¯¯¯¯</p>
+            </div>
+            <div class="bodystuff">
           
             <p>&nbsp;&nbsp;&nbsp;&nbsp;
               <i><b>Paprika</b></i> (パプリカ) is a 2006 Japanese science-fiction 
