--- a/highlights/index.html
+++ b/highlights/index.html
@@ -95,7 +95,8 @@
      </p>
      <ul> 
        <li>my art featured at the <a href="https://artbyform.com/" target="_blank">2021 form fair</a> online art gallery </li>
-         <li><a href="https://www.speedrun.com/cuphead/run/ylken7rz" target="_blank">(sr) cuphead - all bosses - regular, legacy - 30:28</a> - 85th place</li>
+       <li>top 1000 worldwide in <a href="https://saltybet.com/bank/" target="_blank">saltybet</a> </li>
+       <li><a href="https://www.speedrun.com/cuphead/run/ylken7rz" target="_blank">(sr) cuphead - all bosses - regular, legacy - 30:28</a> - 85th place</li>
          <li><a href="https://www.speedrun.com/sally_face/run/mk379o5z" target="_blank">(sr) sally face - any% - 2:16:23</a> - 2nd place </li>
          <li><a href="https://www.video-games-records.com/wii-party-mini-games-with-record-rope-sling-record-r156067.html" target="_blank">wii party - rope swing - 181yd/181m </a> - 1st place</li>
          <li><a href="https://www.speedrun.com/windosill/run/znko49lz" target="_blank">(sr) windosil - any% - 4:51:005</a> - 2nd place</li>
