--- a/writing/paprika/index.html
+++ b/writing/paprika/index.html
@@ -129,7 +129,7 @@
           <div class="bodystuff">
             <img src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/reviews/paprika/d.jpg"style="width: 100%; align:center;"/>
             <p>&nbsp;&nbsp;&nbsp;&nbsp;
-            At an ambiguous time in the near future, the development of a new tech device, the "DC Mini", provides access to the perviously hidden world of people's dreams.
+            At an ambiguous time in the near future, the development of a new tech device, the "DC Mini", provides access to the previously hidden world of people's dreams.
             Under the chief of the department Doctor Toratarō Shima, Kosaku Tokita tirelessly developed this technology, which Atsuko Chiba uses to treat psychiatric patients 
             outside the research facility as her assumed alter-ego "Paprika".
             Due to the prototypical nature of the DC Mini, it lacks the security to prevent anyone with one to enter any other person's dream,
