--- a/cherry/daily/index.html
+++ b/cherry/daily/index.html
@@ -599,14 +599,7 @@
                         </a>
                     </div>
                 </div><!--
-                <div style="width:128px;" class="col-sm-12 col-md-4">
-                    <div class="sign">
-                        <a  class="lightbox" target="_blank" href="https://www.youtube.com/watch?v=eZO03L_wRxc" 
-                        data-caption='no.046:<br class="larry"> "eva.spoilers"<br class="larry"> <h3>- 07/29/21</h3> '>
-                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/46.png" >
-                        </a>
-                    </div>
-                </div>
+               
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/46.a.png" 
@@ -622,11 +615,11 @@
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/46.a.1.png" >
                         </a>
                     </div>
-                </div>
+                </div>-->
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/47.png" 
-                        data-caption='no.047:<br class="larry"> "worlds end"<br class="larry"> <h3>- 07/30/21</h3> '>
+                        data-caption='no.046:<br class="larry"> "worlds end"<br class="larry"> <h3>- 07/29/21</h3> '>
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/47.png" >
                         </a>
                     </div>
@@ -634,15 +627,23 @@
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/47.a.png" 
-                        data-caption='no.047.a:<br class="larry"> "goodbye"<br class="larry"> <h3>- 07/30/21</h3> '>
+                        data-caption='no.046.a:<br class="larry"> "goodbye"<br class="larry"> <h3>- 07/29/21</h3> '>
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/47.a.png" >
                         </a>
                     </div>
                 </div>
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://www.youtube.com/watch?v=eZO03L_wRxc" 
+                        data-caption='no.046.1:<br class="larry"> "eva.spoilers"<br class="larry"> <h3>- 07/29/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/46.png" >
+                        </a>
+                    </div>
+                </div><!--
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://www.youtube.com/watch?v=apG54QvrNU8" 
-                        data-caption='no.048:<br class="larry"> "dimension"<br class="larry"> <h3>- 07/31/21</h3> '>
+                        data-caption='no.047:<br class="larry"> "dimension"<br class="larry"> <h3>- 07/30/21</h3> '>
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/48.png" >
                         </a>
                     </div>
@@ -650,7 +651,7 @@
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/48.a.png" 
-                        data-caption='no.048.a:<br class="larry"> "dimension.still"<br class="larry"> <h3>- 07/31/21</h3> '>
+                        data-caption='no.047.a:<br class="larry"> "dimension.still"<br class="larry"> <h3>- 07/30/21</h3> '>
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/48.a.png" >
                         </a>
                     </div>
@@ -658,7 +659,7 @@
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/49.png" 
-                        data-caption='no.049:<br class="larry"> "photoscan.rebirth"<br class="larry"> <h3>- 08/01/21</h3> '>
+                        data-caption='no.048:<br class="larry"> "photoscan.rebirth"<br class="larry"> <h3>- 07/31/21</h3> '>
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/49.png" >
                         </a>
                     </div>
@@ -666,7 +667,7 @@
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/49.a.png" 
-                        data-caption='no.049.a:<br class="larry"> "photoscan.text"<br class="larry"> <h3>- 08/01/21</h3> '>
+                        data-caption='no.048.a:<br class="larry"> "photoscan.text"<br class="larry"> <h3>- 07/31/21</h3> '>
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/49.a.png" >
                         </a>
                     </div>
@@ -674,7 +675,7 @@
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/50.png" 
-                        data-caption='no.050:<br class="larry"> "photoscan.alt"<br class="larry"> <h3>- 08/02/21</h3> '>
+                        data-caption='no.049:<br class="larry"> "photoscan.alt"<br class="larry"> <h3>- 08/01/21</h3> '>
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/50.png" >
                         </a>
                     </div>
@@ -682,7 +683,7 @@
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/50.a.png" 
-                        data-caption='no.050.a:<br class="larry"> "photoscan.alt.rebirth"<br class="larry"> <h3>- 08/02/21</h3> '>
+                        data-caption='no.049.a:<br class="larry"> "photoscan.alt.rebirth"<br class="larry"> <h3>- 08/01/21</h3> '>
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/50.a.png" >
                         </a>
                     </div>
