--- a/cherry/daily/index.html
+++ b/cherry/daily/index.html
@@ -40,7 +40,7 @@
     <h2>[Daily Art]</h2>
     <p class="page-description text-center">
         / learn to live / <a href="https://relivesight.com/">relivesight.com</a> / <a href="https://relivesight.com/">return home</a> /<br>
-   [official start date]: {jun 15 2021} [current day]: {no.47} 
+   [official start date]: {jun 15 2021} [current day]: {no.48} 
    
    <br><br>
    [tools utilized]: after effects / element 3d / photoshop / blender /
@@ -655,11 +655,11 @@
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/48.a.png" >
                         </a>
                     </div>
-                </div><!--
+                </div>
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/49.png" 
-                        data-caption='no.048:<br class="larry"> "photoscan.rebirth"<br class="larry"> <h3>- 07/31/21</h3> '>
+                        data-caption='no.048:<br class="larry"> "rebirth"<br class="larry"> <h3>- 07/31/21</h3> '>
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/49.png" >
                         </a>
                     </div>
@@ -667,15 +667,15 @@
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/49.a.png" 
-                        data-caption='no.048.a:<br class="larry"> "photoscan.text"<br class="larry"> <h3>- 07/31/21</h3> '>
+                        data-caption='no.048.a:<br class="larry"> "rebirth.text"<br class="larry"> <h3>- 07/31/21</h3> '>
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/49.a.png" >
                         </a>
                     </div>
-                </div>
+                </div><!--
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/50.png" 
-                        data-caption='no.049:<br class="larry"> "photoscan.alt"<br class="larry"> <h3>- 08/01/21</h3> '>
+                        data-caption='no.049:<br class="larry"> "scan"<br class="larry"> <h3>- 08/01/21</h3> '>
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/50.png" >
                         </a>
                     </div>
@@ -683,7 +683,7 @@
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/50.a.png" 
-                        data-caption='no.049.a:<br class="larry"> "photoscan.alt.rebirth"<br class="larry"> <h3>- 08/01/21</h3> '>
+                        data-caption='no.049.a:<br class="larry"> "scan.rebirth"<br class="larry"> <h3>- 08/01/21</h3> '>
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/50.a.png" >
                         </a>
                     </div>
