--- a/cherry/daily/index.html
+++ b/cherry/daily/index.html
@@ -40,7 +40,7 @@
     <h2>[Daily Art]</h2>
     <p class="page-description text-center">
         / learn to live / <a href="https://relivesight.com/">relivesight.com</a> / <a href="https://relivesight.com/">return home</a> /<br>
-   [official start date]: {jun 15 2021} [current day]: {no.49} 
+   [official start date]: {jun 15 2021} [current day]: {no.50} 
    
    <br><br>
    [tools utilized]: after effects / element 3d / photoshop / blender /
@@ -685,6 +685,14 @@
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/50.a.png" 
                         data-caption='no.049.a:<br class="larry"> "scan.rebirth"<br class="larry"> <h3>- 08/01/21</h3> '>
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/50.a.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/50-real.png" 
+                        data-caption='no.050:<br class="larry"> "完全変態"<br class="larry"> <h3>- 08/02/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/50-real.png" >
                         </a>
                     </div>
                 </div><!--
