--- a/cherry/daily/index.html
+++ b/cherry/daily/index.html
@@ -695,8 +695,105 @@
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/50-real.png" >
                         </a>
                     </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/51.png" 
+                        data-caption='no.051:<br class="larry"> "tubular"<br class="larry"> <h3>- 08/03/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/51.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/52.png" 
+                        data-caption='no.052:<br class="larry"> "brightform"<br class="larry"> <h3>- 08/04/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/52.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/53.png" 
+                        data-caption='no.053:<br class="larry"> "echos<br class="larry"> <h3>- 08/05/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/53.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/54.png" 
+                        data-caption='no.054:<br class="larry"> "nature.zine"<br class="larry"> <h3>- 08/06/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/54.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/54.a.png" 
+                        data-caption='no.054.a.:<br class="larry"> "nature.zine.trees"<br class="larry"> <h3>- 08/06/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/54.a.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/55.png" 
+                        data-caption='no.055:<br class="larry"> "nature!"<br class="larry"> <h3>- 08/07/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/55.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/56.png" 
+                        data-caption='no.056:<br class="larry"> "sunlight"<br class="larry"> <h3>- 08/08/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/56.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/57.png" 
+                        data-caption='no.057:<br class="larry"> "nature!!!"<br class="larry"> <h3>- 08/09/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/57.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/58.png" 
+                        data-caption='no.058:<br class="larry"> "freedom"<br class="larry"> <h3>- 08/10/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/58.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/58.a.png" 
+                        data-caption='no.058.a:<br class="larry"> "freedom.alt"<br class="larry"> <h3>- 08/10/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/58.a.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/59.png" 
+                        data-caption='no.059:<br class="larry"> "SurvivalGuide"<br class="larry"> <h3>- 08/11/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/59.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/59.a.png" 
+                        data-caption='no.059.a:<br class="larry"> "SurvivalGuide.pg2"<br class="larry"> <h3>- 08/11/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/59.a.png" >
+                        </a>
+                    </div>
                 </div><!--
--->
+ -->
+
 
 
 
