--- a/cherry/contact/index.html
+++ b/cherry/contact/index.html
@@ -27,36 +27,36 @@
 <body>
 
 <div class="container gallery-container">
-    <h1><div class="carry"><img style="width:300px; margin-bottom:15px;" src="../cherry-save.png" >
-    <a href="https://relivesight.com/cherry">PORTFOLIO</a>
-    <a href="https://relivesight.com/cherry/daily">DAILY</a>
-    <a href="https://relivesight.com/cherry/contact">CONTACT</a>
-    <a href="https://relivesight.com/cherry/shop">SHOP</a>
+    <h1><div class="carry"><img id="logo" style="width:300px; margin-bottom:15px;" src="../cherry-save.png" >
+    <a id="l13" href="https://relivesight.com/cherry">PORTFOLIO</a>
+    <a id="l12" href="https://relivesight.com/cherry/daily">DAILY</a>
+    <a id="l11" href="https://relivesight.com/cherry/contact">CONTACT</a>
+    <a id="l10" href="https://relivesight.com/cherry/shop">SHOP</a>
     </div></h1>
 
     
 
     <h2>[Contact]</h2>
     <p class="page-description text-center">
-   / contact me / <a href="https://relivesight.com/">relivesight.com</a> / cherry / <a href="https://relivesight.com/">return home</a> /
+   / contact me / <a id="l9" href="https://relivesight.com/">relivesight.com</a> / cherry / <a id="l8" href="https://relivesight.com/">return home</a> /
    <br><br>
    [discord]: 𝖆𝖑𝖊𝖙𝖎𝖚𝖓𝖊#3865
    <br>
    [discord_2]: 𝑜𝓂𝓃𝒾𝓈𝒶𝒾 ♡#2639
    <br><br>
-   [twitter]: <a target="_blank" href="https://twitter.com/aletiune">cherry✟ @aletiune</a>
+   [twitter]: <a id="l7" target="_blank" href="https://twitter.com/aletiune">cherry✟ @aletiune</a>
    <br>
-   [twitter_2]: <a target="_blank" href="https://twitter.com/omnisai">𝔯𝔢𝔫 ♡ @omnisai</a>
+   [twitter_2]: <a id="l6" target="_blank" href="https://twitter.com/omnisai">𝔯𝔢𝔫 ♡ @omnisai</a>
    <br><br>
-   [steam_2]: <a target="_blank" href="https://steamcommunity.com/id/omnisairen/">【Omnisairen】</a>
+   [steam_2]: <a id="l5" target="_blank" href="https://steamcommunity.com/id/omnisairen/">【Omnisairen】</a>
    <br>
-   [reddit_2]: <a target="_blank" href="https://www.reddit.com/user/OmnisaiRen">✦𝖔𝖒𝖓𝖎𝖘𝖆𝖎 𝖗𝖊𝖓✦</a>
+   [reddit_2]: <a id="l4" target="_blank" href="https://www.reddit.com/user/OmnisaiRen">✦𝖔𝖒𝖓𝖎𝖘𝖆𝖎 𝖗𝖊𝖓✦</a>
    <br>
-   [instagram_2]: <a target="_blank" href="https://www.instagram.com/omnisai.ren/">omnisai.ren</a>
+   [instagram_2]: <a id="l3" target="_blank" href="https://www.instagram.com/omnisai.ren/">omnisai.ren</a>
    <br><br>
-   [youtube]: <a target="_blank" href="https://www.youtube.com/channel/UCLxXYys18P4foS8Kxg9Uxtg">aletiune</a>
+   [youtube]: <a id="l2" target="_blank" href="https://www.youtube.com/channel/UCLxXYys18P4foS8Kxg9Uxtg">aletiune</a>
    <br>
-   [youtube_2]: <a target="_blank" href="https://www.youtube.com/channel/UCaw9NyNvudFpHxljwC_Xlmw">Omnisai Ren</a>
+   [youtube_2]: <a id="l1" target="_blank" href="https://www.youtube.com/channel/UCaw9NyNvudFpHxljwC_Xlmw">Omnisai Ren</a>
    <br><br>
    [email]: aletiune@gmail.com
    <br>
@@ -67,6 +67,104 @@
         <br><br>
         </p>  
 </div>
+
+<!--MODE SCRIPT -->
+<script>
+  var state=1; // should get overridden
+
+  function docBlack() {
+      document.body.style.backgroundColor= "black";
+      document.getElementsByClassName('container')[0].style['background-color'] = 'black';
+      document.getElementsByClassName('container')[0].style['color'] = 'white';
+      document.getElementsByClassName('button1')[0].style['background-color'] = 'white';
+      document.getElementsByClassName('button1')[0].style['color'] = 'black';
+      var lemth="l1"
+      for(let i = 1; i < 14; i++)
+      {
+          lemth="l" +i
+          document.getElementById(lemth).style['color'] = 'white';
+      } 
+      document.getElementById('logo').style['filter'] = 'invert(1)';
+      for(let i = 0; i < 32; i++)
+      {
+          document.getElementsByClassName('bd--white')[i].style['border'] = '4px solid white';
+          document.getElementsByClassName('tx--white')[i].style['color'] = 'white';
+      }
+  }
+  function docWhite() {
+      document.body.style.backgroundColor= "white";
+      document.getElementsByClassName('container')[0].style['background-color'] = 'white';
+      document.getElementsByClassName('container')[0].style['color'] = 'black';
+      document.getElementsByClassName('button1')[0].style['background-color'] = 'black';
+      document.getElementsByClassName('button1')[0].style['color'] = 'white';
+      var lemth="l1"
+      for(let i = 1; i < 14; i++)
+      {
+          lemth="l" +i
+          document.getElementById(lemth).style['color'] = 'black';
+      }  
+      document.getElementById('logo').style['filter'] = 'invert(0)';
+      for(let i = 0; i < 32; i++)
+      {
+          document.getElementsByClassName('bd--white')[i].style['border'] = '4px solid black';
+          document.getElementsByClassName('tx--white')[i].style['color'] = 'black';
+      }
+  }
+  
+  /*window.onload = () => {*/
+  var current_state =localStorage.getItem("currentState");
+  if(current_state == null)
+  {
+      //console.log("we shouldnt be here");
+      localStorage.setItem("currentState",1);
+      current_state=localStorage.getItem("currentState"); 
+  }
+  if(current_state==1)
+  {
+      //console.log("doc black was supposed to happen");
+      docBlack();
+      var elem = document.getElementById("myButton1");
+      elem.value = "Light Mode";
+      state=2;
+  }
+  if(current_state==2)
+  {
+      //console.log("doc white was supposed to happen");
+      docWhite();
+      var elem = document.getElementById("myButton1");
+      elem.value = "Dark Mode";
+      state=1;
+  }
+  else
+  {
+      docBlack();
+      var elem = document.getElementById("myButton1");
+      elem.value = "Light Mode";
+      state=2;
+  }
+  /*}*/
+  
+  function myFunction()
+  {
+      var elem = document.getElementById("myButton1");
+      if (elem.value=="Dark Mode") elem.value = "Light Mode";
+      else elem.value = "Dark Mode";
+      switch(state)
+      {
+          case 1:
+              docBlack();
+              localStorage.setItem("currentState",1);
+              state=2;
+              break;
+          case 2:
+              docWhite();
+              localStorage.setItem("currentState",2);
+              state=1;
+              break;
+      }
+  }
+  
+</script>
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.js"></script>
