--- a/cherry/contact/index.html
+++ b/cherry/contact/index.html
@@ -23,6 +23,23 @@
       gtag('config', 'UA-123647555-2');
     </script>
     <script src="../../re/w3.js"></script>
+        <!--FADE IN-->
+        <style>
+          body {
+              animation: fadeInAnimation ease 3s;
+              animation-iteration-count: 1;
+              animation-fill-mode: forwards;
+          }
+          @keyframes fadeInAnimation {
+              0% {
+                  opacity: 0;
+              }
+              100% {
+                  opacity: 1;
+              }
+          }
+      </style>
+      <!--FADE IN END-->
 </head>
 <body>
 
@@ -64,7 +81,7 @@
    [email_2]: omnisairen@gmail.com
 </p><br>
   
- <p class="page-description"><a class="yoyo" href="https://relivesight.com/">/return.main/</a>
+ <p class="page-description"><a id="l15" class="yoyo" href="https://relivesight.com/">/return.main/</a>
         <br><br>
         </p>  
 </div>
@@ -80,7 +97,7 @@
       document.getElementsByClassName('button1')[0].style['background-color'] = 'white';
       document.getElementsByClassName('button1')[0].style['color'] = 'black';
       var lemth="l1"
-      for(let i = 1; i < 15; i++)
+      for(let i = 1; i < 16; i++)
       {
           lemth="l" +i
           document.getElementById(lemth).style['color'] = 'white';
@@ -95,7 +112,7 @@
       document.getElementsByClassName('button1')[0].style['background-color'] = 'black';
       document.getElementsByClassName('button1')[0].style['color'] = 'white';
       var lemth="l1"
-      for(let i = 1; i < 15; i++)
+      for(let i = 1; i < 16; i++)
       {
           lemth="l" +i
           document.getElementById(lemth).style['color'] = 'black';
