--- a/cherry/index.html
+++ b/cherry/index.html
@@ -276,7 +276,7 @@
 
       <br> <br>
 
- <p class="page-description"><a class="yoyo" href="https://relivesight.com/">/return.main/</a>
+ <p class="page-description"><a id="l39" class="yoyo" href="https://relivesight.com/">/return.main/</a>
         <br><br>
         </p>  
 </div>
@@ -292,7 +292,7 @@
         document.getElementsByClassName('button1')[0].style['background-color'] = 'white';
         document.getElementsByClassName('button1')[0].style['color'] = 'black';
         var lemth="l1"
-        for(let i = 1; i < 39; i++)
+        for(let i = 1; i < 40; i++)
         {
             lemth="l" +i
             document.getElementById(lemth).style['color'] = 'white';
@@ -311,7 +311,7 @@
         document.getElementsByClassName('button1')[0].style['background-color'] = 'black';
         document.getElementsByClassName('button1')[0].style['color'] = 'white';
         var lemth="l1"
-        for(let i = 1; i < 39; i++)
+        for(let i = 1; i < 40; i++)
         {
             lemth="l" +i
             document.getElementById(lemth).style['color'] = 'black';
