--- a/cherry/daily/index.html
+++ b/cherry/daily/index.html
@@ -65,6 +65,9 @@
    autodesk fusion 360 / cinema 4d / visual studio code / ableton live 10 suite / [x]: video link
     </p>
     <br>
+
+    
+
     <div class="tz-gallery">
 
         <!-- this one is desktop i think-->
@@ -721,15 +724,15 @@
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/51.png" >
                         </a>
                     </div>
-                </div><!--
+                </div>
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/52.png" 
-                        data-caption='no.052:<br class="larry"> "brightform"<br class="larry"> <h3>- 08/04/21</h3> '>
+                        data-caption='no.052:<br class="larry"> "bloom"<br class="larry"> <h3>- 08/04/21</h3> '>
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/52.png" >
                         </a>
                     </div>
-                </div>
+                </div><!--
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/53.png" 
